docker-compose modified

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 config-service:
-  image: kbastani/config-service
+  image: demo/config-service
   environment:
    - SPRING_PROFILES_ACTIVE=docker
    - DOCKER_IP=$DOCKER_IP
   ports:
    - 8888:8888
 hystrix-dashboard:
-  image: kbastani/hystrix-dashboard
+  image: demo/hystrix-dashboard
   environment:
    - SPRING_PROFILES_ACTIVE=docker
    - DOCKER_IP=$DOCKER_IP
@@ -34,7 +34,7 @@ redis:
   ports:
    - 6379:6379
 user-service:
-  image: kbastani/user-service
+  image: demo/user-service
   ports:
    - 8181:8181
   links:
@@ -45,14 +45,14 @@ user-service:
    - SPRING_PROFILES_ACTIVE=docker
    - DOCKER_IP=$DOCKER_IP
 discovery-service:
-  image: kbastani/discovery-service
+  image: demo/discovery-service
   ports:
    - 8761:8761
   environment:
    - SPRING_PROFILES_ACTIVE=docker
    - DOCKER_IP=$DOCKER_IP
 edge-service:
-  image: kbastani/edge-service
+  image: demo/edge-service
   ports:
    - 9999:9999
   links:
@@ -63,7 +63,7 @@ edge-service:
    - SPRING_PROFILES_ACTIVE=docker
    - DOCKER_IP=$DOCKER_IP
 account-service:
-  image: kbastani/account-service
+  image: demo/account-service
   links:
    - user-service
    - discovery-service
@@ -73,7 +73,7 @@ account-service:
    - SPRING_PROFILES_ACTIVE=docker
    - DOCKER_IP=$DOCKER_IP
 inventory-service:
-  image: kbastani/inventory-service
+  image: demo/inventory-service
   links:
    - neo4j
    - discovery-service
@@ -82,7 +82,7 @@ inventory-service:
    - SPRING_PROFILES_ACTIVE=docker
    - DOCKER_IP=$DOCKER_IP
 order-service:
-  image: kbastani/order-service
+  image: demo/order-service
   links:
    - mongo
    - discovery-service
@@ -92,7 +92,7 @@ order-service:
    - SPRING_PROFILES_ACTIVE=docker
    - DOCKER_IP=$DOCKER_IP
 catalog-service:
-  image: kbastani/catalog-service
+  image: demo/catalog-service
   links:
    - redis
    - mysql
@@ -102,7 +102,7 @@ catalog-service:
    - SPRING_PROFILES_ACTIVE=docker
    - DOCKER_IP=$DOCKER_IP
 shopping-cart-service:
-  image: kbastani/shopping-cart-service
+  image: demo/shopping-cart-service
   links:
    - mysql
    - discovery-service
@@ -112,7 +112,7 @@ shopping-cart-service:
    - SPRING_PROFILES_ACTIVE=docker
    - DOCKER_IP=$DOCKER_IP
 online-store-web:
-  image: kbastani/online-store-web
+  image: demo/online-store-web
   ports:
    - 8787:8787
   links:
